adjust README for setup instructions